src/scss/index.scss
/* ... */
.contact-container {
    & > div {
        margin-top: 10vh;
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        & > div {
            align-self: flex-start;
            width: 45%;
            margin-top: -3em;
        }
        form {
            align-self: flex-end;
            display: flex;
            flex-direction: column;
            width: 45%;

            & > input, & > textarea {
                margin-bottom: 1rem;
                outline: none;
                border-top-left-radius: 10px;
                border-bottom-right-radius: 10px;
                border: none;
                background: rgba($darkmode-bg-color, 0.85);
                border: 1px solid white;
                color: white;
                padding: 0.5rem;

                &::placeholder {
                    color: white;
                }
            }

            button {
                width: 100px;
                margin: 1rem auto 0;
                background: rgba($darkmode-bg-color, 0.85);
                padding: 0.5rem;
                border: 1px solid white;
                color: white;
                border-radius: 10px;

                &:hover, &:focus {
                    box-shadow: 0 0 3px 3px rgba(255,255,255,0.4);
                }
            }

            textarea {
                resize: none;
            }
        }
    }
}

#home {
    display: none;
}

#projects {
    display: flex;
}

#contact {
    display: none;
}

.fader {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 55%;
    max-width: 1600px;
    opacity: 0;
    color: black;
    margin-bottom: 4em;
    padding: 1.5em 0.5em;
    border-radius: 6px;
    box-shadow: 0 2px 8px 0px rgba($primary, 0.95);
    transform: translateX(25vw);
    transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
    
    .project-description {
        border-bottom: 0.5rem solid white;
        align-self: center;
        position: relative;
        width: calc(100% - 5rem);
        margin: 0 2.5rem;
        height: 5em;
        overflow: hidden;
        background-color: rgba(255,255,255,0);
        outline: 10px solid rgba(255,255,255,0);
        transition: background-color 600ms ease, outline 500ms ease;

        h3 {
            font-size: 1.5em;
        }

        &::after {
            position: absolute;
            content: '[Read more...]';
            text-align: left;
            bottom: 0;
            padding-top: 0.2em;
            left: 0;
            width: 100%;
            height: 1.5em;
            font-size: 0.8em;
            background: white;
        }

        & > div {
            margin-top: 0.25rem;
            margin-bottom: 0.5rem;
        }

        .description {
            overflow: hidden;
            font-size: 1em;
            padding-bottom: 1em;
            position: relative;
            height: 3.7rem;

            & ~ div {
                width: 80%;
                margin: 0 auto;
            }
        }

        .close-description {
            position: absolute;
            display: none;
            justify-content: center;
            align-items: center;
            top: -25px;
            right: 10px;
            color: black;
            cursor: pointer;
        }

        &:hover {
            position: absolute;
            text-align: center;
            padding-top: 1rem;
            width: 100%;
            height: 85%;
            z-index: 50;
            white-space: normal;
            overflow: visible;
            width: calc(100% - 2rem);
            margin: 1.5em auto;
            border: none;

            &::after {
                display: none;
            }

            & + .image-container {
                margin-top: 6em;
                opacity: 0.05;
                transition: opacity 600ms ease-out;
            }

            h3 {
                font-size: 1.5em;
            }

            .description {
                text-align: center;
                font-size: 1.2em;
                margin-top: 1em;
                padding: 0 15%;
                white-space: normal;
                height: 70%;
                overflow-y: auto;
                transition: margin-top 600ms ease-in-out;

                p {
                    margin-top: 0.5rem;
                }

                p:first-child::after {
                    display: none;
                }
            }
        }
    }

    .image-container {
        position: relative;
        background: white;
        margin-bottom: 0.5rem;
        z-index: 0;
        cursor: pointer;

        &::before, &::after {
            position: absolute;
            content: '';
            bottom: 12px;
            width: 45%;
            height: 20px;
            background: rgba(0,0,0,0.3);
            box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
            z-index: -1;
        }

        &::before {
            left: 10px;
            transform: rotate(-2deg);
        }

        &::after {
            right: 10px;
            transform: rotate(2deg);
        }

        img {
            box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
        }
    }

    .project-links {
        display: flex;
        justify-content: space-around;
        width: 90%;

        a {
            max-width: 45%;
            max-height: 2rem;
            display: flex;
            justify-content: center;
            align-items: center;
            background: rgba(0,0,0,0.05);
            border: 1px solid black;
            padding: 1em;
            color: black;
            text-align: center;
            text-decoration: none;

            &:hover {
                background: rgba(0,0,0,0.8);
                color: pink;
            }
        }
    }
}

.appear {
    transform: translateX(0);
    opacity: 1;
}
/* ... */

